# bolt

./: CMakeLists.txt
src/: bolt.cpp  bolt_module.cpp  optix.cpp
src/base/: accelerator.cpp  accelerator.h  camera.h  emitter.h  filter.h  integrator.cpp  integrator.h  light.h  material.h  medium.h  sampler.h  texture.h
src/core/: common.h  film.cpp  film.h  logging.h  out_text.h  ray.h  records.h  scene.cpp  scene.h  shape.h  spectrum.cpp  spectrum.h  threading.h
src/core/bxdf/: include.h
src/core/bxdf/fresnel/: cauchy.h  conductor.h  dielectric.h  fresnel_tex.h  include.h  stdafx.h
src/core/bxdf/microfacet/: microfacet.h
src/core/geometry/: bounds.h  differentials.h  include.h  primitives.h  tri.h  uv.h
src/core/math/: distr.h  epsilon.h  frame.h  functions.h  include.h  lambda.cpp  lambda.h  matrix.h  misc.h  quaternion.h  templates.h  transform.h
src/core/math/simd/: avx_mathfun.h  double.h  float.h  include.h  int.h
src/core/math/vectors/: include.h  vec2.h  vec3.h  vec4.h
src/core/random/: rng.h  splitmix64.h  xorshiro128_plus.h  xorshiro128plusplus.h  xorshiro256_plus.h  xorshiro256plusplus.h
src/core/util/: checks.h  strings.h
src/core/vulkan/: shaders.h  vk_core.h
src/tests/: camera.cpp  embree_test.cpp  kompute.cpp  rng_test.cpp
src/tests/python/: output.exr  path.py  sampling.py  validate.py  vulkan.py
src/units/accelerators/: embree.h  vk.cpp  vk.h  vk2.cpp  vk2.h  vk3.cpp  vk3.h
src/units/accelerators/dep/: fs.txt  new.cpp  new.h  temp.cpp  vk_manual.cpp
src/units/cameras/: perspective.cpp  perspective.h
src/units/filters/: gaussian.h
src/units/importers/: imp_accelerator.cpp  imp_bin.cpp  imp_camera.cpp  imp_filter.cpp  imp_image.cpp  imp_integrator.cpp  imp_light.cpp  imp_materials.cpp  imp_mesh.cpp  imp_sampler.cpp
src/units/integrators/depth/: depth.cpp  depth.h
src/units/integrators/path/: pt.cpp  pt.h
src/units/integrators/vk/: vk.cpp  vk.h
src/units/lights/: point.h
src/units/materials/: diffuse.h  glass.h
src/units/samplers/: low_discrepancy.h  non_random.h  partitioned.h  random.h
src/units/shaders/: basic.comp  basic.spv  depth.comp  depth.spv  ray.comp
src/units/shaders/old/: ray.comp  ray.spv
src/units/textures/: import.h
